fix(server) : add conditional to include secret  * fix deployment template  * fix statefulset template  * fix amplication server helm template  * add secret yaml for amplication server  * closes #3466

--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -19,10 +19,12 @@ spec:
             requests:
               cpu:    {{ .Values.minCPU }}
               memory: {{ .Values.maxMemory }}
-          {{- if hasKey .Values "config" }}
           envFrom:
+          {{- if hasKey .Values "config" }}
           - configMapRef:
               name: '{{ .Values.name }}'
+          {{- end }}
+          {{- if hasKey .Values "secrets" }}
           - secretRef:
               name: '{{ .Values.name }}'
           {{- end }}
