--- a/packages/amplication-data-service-generator/src/admin/static/package.json
+++ b/packages/amplication-data-service-generator/src/admin/static/package.json
@@ -5,9 +5,7 @@
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@material-ui/core": "4.12.4",
-    "gql": "1.1.2",
     "graphql": "15.6.1",
-    "graphql-tag": "2.12.4",
     "lodash": "4.17.21",
     "pluralize": "8.0.0",
     "ra-data-graphql-amplication": "0.0.13",
@@ -16,7 +14,6 @@
     "react-dom": "16.14.0",
     "react-scripts": "5.0.0",
     "sass": "^1.39.0",
-    "typescript": "4.2.4",
     "web-vitals": "1.1.2"
   },
   "scripts": {
@@ -53,6 +50,7 @@
     "@types/node": "12.20.16",
     "@types/react": "16.14.11",
     "@types/react-dom": "17.0.0",
-    "type-fest": "0.13.1"
+    "type-fest": "0.13.1",
+    "typescript": "4.2.4"
   }
 }
