change to initcontainers

--- a/helm/charts/services/amplication-server/templates/job.yaml
+++ b/helm/charts/services/amplication-server/templates/job.yaml
@@ -9,7 +9,7 @@ spec:
       name: "{{ .Values.name }}-migrate"
     spec:
       restartPolicy: Never
-      containers:
+      initContainers:
       - name: "{{ .Values.name }}-migrate"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         resources:
