--- a/helm/charts/services/amplication-git-pull-service/templates/job.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/job.yaml
@@ -9,16 +9,9 @@ spec:
       name: "{{ .Values.name }}-migrate"
     spec:
       restartPolicy: Never
-      containers:
+      initContainers:
       - name: "{{ .Values.name }}-migrate"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        resources:
-          limits:
-            cpu: {{ .Values.maxCPU }}
-            memory: {{ .Values.minMemory }}
-          requests:
-            cpu: {{ .Values.minCPU }}
-            memory: {{ .Values.maxMemory }}
         command: ["/bin/sh"]
         args: ["-c", "npm run migrate:up"]
         env:
