--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -43,6 +43,7 @@
     "react-xarrows": "1.7.1",
     "sass": "1.35.2",
     "semver": "7.3.5",
+    "sentence-case": "3.0.4",
     "styled-components": "5.1.1",
     "use-debounce": "3.4.3",
     "xlsx": "0.16.9",
