--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -46,8 +46,10 @@ amplication-server:
       BUILD_STATUS_TOPIC: 'build.internal.build-status.event.0'
 
       GET_BUILD_BY_RUN_ID_TOPIC: build.internal.get-build-by-run-id.message.0
+      
       #EFS
       BASE_BUILDS_FOLDER: /amplication-data/build-data
+      BUILD_CONTEXT_LOCATION: /amplication-data/input-data
 
       #GCP - APPS Builder
 
@@ -135,16 +137,16 @@ amplication-build-manager-service:
       GENERATE_RESOURCE_TOPIC: build.internal.generate-resource.event.0
       BUILD_STATUS_TOPIC: build.internal.build-status.event.0
 
-      BUILD_CONTEXT_FS_LOCATION: /amplication-data/build-contexts
+      BUILD_CONTEXT_FS_LOCATION: /amplication-data/input-data
       BUILD_ARTIFACT_FS_LOCATION: /amplication-data/build-data
 
-      BUILD_CONTEXT_S3_BUCKET: amplication-dsg-dev
-      BUILD_CONTEXT_S3_LOCATION: build-contexts
+      BUILD_CONTEXT_S3_BUCKET: amplication-build-context-input-eugene
+      BUILD_CONTEXT_S3_LOCATION: inputs
 
-      BUILD_ARTIFACT_S3_BUCKET: amplication-dsg-dev
-      BUILD_ARTIFACT_S3_LOCATION: build-artifacts
+      BUILD_ARTIFACT_S3_BUCKET: amplication-code-build-artifacts-eugene
+      BUILD_ARTIFACT_S3_LOCATION: artifacts
 
-      CODE_BUILD_PROJECT_NAME: code-generator-dev
+      CODE_BUILD_PROJECT_NAME: amplication_dsg_project_eugene
 
       BUILD_STATE_TOPIC: build.external.build-state.event.0
       BUILD_PHASE_TOPIC: build.external.build-phase.event.0
