--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -155,3 +155,5 @@ amplication-build-manager-service:
       BUILD_IMAGE_VERSION: 0.0.5
 
       GET_BUILD_BY_RUN_ID_TOPIC: build.internal.get-build-by-run-id.message.0
+
+      AWS_DEFAULT_REGION: us-east-1
