--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -161,3 +161,4 @@ amplication-build-manager-service:
       GET_BUILD_BY_RUN_ID_TOPIC: build.internal.get-build-by-run-id.message.0
 
       AWS_DEFAULT_REGION: us-east-1
+      AWS_REGION: us-east-1
