--- a/helm/charts/services/amplication-server/templates/job.yaml
+++ b/helm/charts/services/amplication-server/templates/job.yaml
@@ -1,31 +1,3 @@
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: "{{ .Values.name }}-migrate"
-spec:
-  ttlSecondsAfterFinished: 30
-  template:
-    metadata:
-      name: "{{ .Values.name }}-migrate"
-    spec:
-      restartPolicy: Never
-      containers:
-      - name: "{{ .Values.name }}-migrate"
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        resources:
-          limits:
-            cpu: {{ .Values.maxCPU }}
-            memory: {{ .Values.minMemory }}
-          requests:
-            cpu: {{ .Values.minCPU }}
-            memory: {{ .Values.maxMemory }}
-        command: ["/bin/sh"]
-        args: ["-c", "npm run migrate:up"]
-        env:
-        - name: POSTGRESQL_URL
-          valueFrom:
-            secretKeyRef:
-              name: {{ .Values.name }}
-              key: POSTGRESQL_URL
-              optional: false
-       
+{{ include "base.job" (list . "amplication-server.job") -}}
+{{- define "amplication-server.job" -}}
+{{- end }}
