Apply initContainers for git-pull-service

--- a/helm/charts/services/amplication-git-pull-service/templates/deployment.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/deployment.yaml
@@ -1,3 +1,25 @@
 {{ include "base.deployment" (list . "amplication-git-pull-service.deployment") -}}
 {{- define "amplication-git-pull-service.deployment" -}}
+spec:
+  template:
+    spec:
+      initContainers:
+        - name: "{{ .Values.name }}-migrate"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          resources:
+            limits:
+              cpu: {{ .Values.maxCPU }}
+              memory: {{ .Values.minMemory }}
+            requests:
+              cpu: {{ .Values.minCPU }}
+              memory: {{ .Values.maxMemory }}
+          command: ["/bin/sh"]
+          args: ["-c", "npm run migrate:up --scope=@amplication/git-pull-service;", "exit"]
+          env:
+          - name: POSTGRESQL_URL
+            valueFrom:
+              secretKeyRef:
+                name: {{ .Values.name }}
+                key: POSTGRESQL_URL
+                optional: false
 {{- end }}
