--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -3,6 +3,13 @@ global:
     name: shimi-efs-claim
   pv:
     name: efs-pv-shimi
+  nodeSelector:
+    role: custom-envs
+  tolerations:
+    - key: "custom-envs"
+      operator: "Equal"
+      value: "true"
+
 
 postgres:
   primary:
