Revert "update requests + delete limit (#3570)"
This reverts commit 723b546e188b74bf7fd17d99bf3292767b40d9e2.

--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -12,6 +12,9 @@ spec:
         - name: "{{ .Values.name }}-migrate"
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           resources:
+            limits:
+              cpu: {{ .Values.maxCPU }}
+              memory: {{ .Values.minMemory }}
             requests:
               cpu: {{ .Values.minCPU }}
               memory: {{ .Values.maxMemory }}
