--- a/package.json
+++ b/package.json
@@ -33,13 +33,12 @@
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
     "@types/jest": "27.0.2",
-    "@types/ora": "3.2.0",
     "@types/semver": "7.3.9",
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
+    "nx": "14.5.4",
     "prettier": "2.0.5",
-    "ts-jest": "27.0.5",
-    "nx": "14.5.4"
+    "ts-jest": "27.0.5"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
