--- a/lerna.json
+++ b/lerna.json
@@ -6,10 +6,13 @@
     "packages/amplication-data-service-generator/src/admin/static/",
     "packages/amplication-data-service-generator/src/server/static/"
   ],
-  "version": "0.15.0",
+  "version": "0.15.1",
   "command": {
     "bootstrap": {
-      "ignore": ["admin-template", "server-template"]
+      "ignore": [
+        "admin-template",
+        "server-template"
+      ]
     }
   }
 }
