feat(server): query

--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -82,6 +82,7 @@
     "passport-jwt": "4.0.0",
     "php-serialize": "4.0.2",
     "pluralize": "8.0.0",
+    "query-string": "7.1.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.4.0",
     "semver": "7.3.5",
@@ -110,6 +111,7 @@
     "@types/passport-github2": "1.2.5",
     "@types/passport-jwt": "3.0.6",
     "@types/pluralize": "0.0.29",
+    "@types/query-string": "6.3.0",
     "@types/semver": "7.3.9",
     "@types/supertest": "2.0.11",
     "@types/tar-stream": "2.2.2",
