Temporarily set replica count to 1 and adjust memory for DSG test

--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -3,6 +3,7 @@
 spec:
   template:
     spec:
+      replicas: 1
       {{- with .Values.image.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
