--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@amplication/code-gen-types": "^0.16.0",
+    "@amplication/plugin-auth-basic": "^1.0.0",
+    "@amplication/plugin-auth-jwt": "^1.0.0",
     "@babel/parser": "7.14.7",
     "@extra-set/difference": "2.2.4",
     "camel-case": "4.1.2",
