--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
+    "@nrwl/devkit": "^14.6.5",
     "@types/jest": "27.0.2",
     "@types/semver": "7.3.9",
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
-    "nx": "14.5.4",
+    "nx": "14.6.5",
     "prettier": "2.0.5",
     "ts-jest": "27.0.5"
   },
   "engines": {
-    "node": "^16.3.0 || ^14.0.0",
-    "npm": "^8.1.0 || ^7.3.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.1.0"
   },
   "bugs": {
     "url": "https://github.com/amplication/amplication/issues"
