wip: refactor-package-json
nx can't run properly, so we need to add `@nrwl/workspace` to root package.json,
  and try to dry run generate a project successfully
  ```bash
  yarn add -D @nrwl/node
  yarn add -D typescript
  yarn nx g @nrwl/node:app test
  yarn nx g @nrwl/node:remove test
  ```

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,6 +12,7 @@
     "redhat.vscode-yaml",
     "streetsidesoftware.code-spell-checker",
     "hashicorp.terraform",
-    "sleistner.vscode-fileutils"
+    "sleistner.vscode-fileutils",
+    "firsttris.vscode-jest-runner"
   ]
 }
