--- a/package.json
+++ b/package.json
@@ -27,19 +27,33 @@
     "ora": "5.4.0",
     "react-query": "^3.39.1",
     "semver": "7.3.5",
+    "tslib": "^2.3.0",
     "winston": "3.3.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
     "@nrwl/devkit": "^14.6.5",
+    "@nrwl/eslint-plugin-nx": "14.6.5",
+    "@nrwl/jest": "14.6.5",
+    "@nrwl/linter": "14.6.5",
+    "@nrwl/node": "^14.6.5",
     "@types/jest": "27.0.2",
+    "@types/node": "16.11.7",
     "@types/semver": "7.3.9",
+    "@typescript-eslint/eslint-plugin": "~5.33.1",
+    "@typescript-eslint/parser": "~5.33.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "graphql": "15.3.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "npm-run-all": "4.1.5",
     "nx": "14.6.5",
     "prettier": "2.0.5",
-    "ts-jest": "27.0.5"
+    "ts-jest": "27.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "^4.8.3"
   },
   "engines": {
     "node": ">=16.0.0",
