wip: working on refactor-package-json

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nrwl/jest": "14.6.5",
     "@nrwl/linter": "14.6.5",
     "@nrwl/node": "^14.6.5",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/semver": "7.3.9",
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "~5.33.1",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "fs-extra": "^10.1.0",
     "graphql": "15.3.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
