wip: refactor-package-json

--- a/package.json
+++ b/package.json
@@ -25,10 +25,162 @@
   "dependencies": {
     "lerna": "5.4.1",
     "ora": "5.4.0",
-    "react-query": "^3.39.1",
+    "react-query": "3.39.1",
     "semver": "7.3.5",
-    "tslib": "^2.3.0",
-    "winston": "3.3.4"
+    "tslib": "1.14.1",
+    "winston": "3.3.4",
+    "@apollo/client": "3.3.16",
+    "@oclif/command": "1.8.16",
+    "@oclif/config": "1.17.0",
+    "@oclif/plugin-help": "3.2.2",
+    "cli-ux": "5.5.1",
+    "cross-fetch": "3.1.5",
+    "graphql": "15.7.2",
+    "pascal-case": "3.1.2",
+    "pluralize": "8.0.0",
+    "url-join": "4.0.1",
+    "@amplication/code-gen-types": "^0.16.1",
+    "@amplication/design-system": "^0.16.1",
+    "@extra-set/difference": "2.2.3",
+    "@monaco-editor/react": "^4.4.4",
+    "@rooks/use-window-size": "3.6.0",
+    "ajv-errors": "3.0.0",
+    "axios": "0.27.2",
+    "capital-case": "1.0.4",
+    "classnames": "2.3.1",
+    "date-fns": "2.22.1",
+    "deepdash-es": "5.3.9",
+    "downloadjs": "1.4.7",
+    "events": "3.3.0",
+    "formik": "2.2.9",
+    "lodash": "4.17.21",
+    "query-string": "7.1.1",
+    "react": "16.14.0",
+    "react-beautiful-dnd": "13.1.0",
+    "react-command-palette": "0.13.0-0",
+    "react-compound-timer": "1.2.0",
+    "react-device-detect": "1.17.0",
+    "react-diff-viewer": "3.1.1",
+    "react-dom": "16.14.0",
+    "react-draggable": "4.4.3",
+    "react-dropzone": "11.3.4",
+    "react-helmet": "6.1.0",
+    "react-hotkeys": "2.0.0",
+    "react-lazylog": "4.5.3",
+    "react-router-dom": "5.3.3",
+    "react-scripts": "4.0.3",
+    "react-teleporter": "2.2.1",
+    "react-tracking": "8.0.0",
+    "react-use-localstorage": "3.5.3",
+    "react-xarrows": "1.7.1",
+    "sass": "1.35.2",
+    "styled-components": "5.1.1",
+    "use-debounce": "3.4.3",
+    "xlsx": "0.16.9",
+    "yaml": "1.10.2",
+    "yup": "0.32.11",
+    "@nestjs/core": "8.2.3",
+    "ast-types": "^0.14.2",
+    "@babel/parser": "7.14.7",
+    "camel-case": "4.1.2",
+    "fast-glob": "3.2.11",
+    "nest-morgan": "1.0.1",
+    "param-case": "3.0.4",
+    "prettier": "2.6.2",
+    "prisma-schema-dsl": "1.1.5",
+    "recast": "0.20.5",
+    "replace-ext": "2.0.0",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.10.0",
+    "@mui/base": "5.0.0-alpha.92",
+    "@mui/lab": "5.0.0-alpha.79",
+    "@mui/material": "5.9.3",
+    "@mui/system": "5.9.3",
+    "@primer/octicons-react": "16.2.0",
+    "@primer/react": "34.7.1",
+    "react-animate-height": "2.0.23",
+    "react-select": "5.4.0",
+    "react-transition-group": "4.4.2",
+    "skeleton-screen-css": "1.0.1",
+    "@amplication/git-service": "^0.16.1",
+    "@amplication/kafka": "^0.16.1",
+    "@amplication/nest-logger-module": "^0.16.1",
+    "@nestjs/common": "8.4.4",
+    "@nestjs/config": "1.1.5",
+    "@nestjs/microservices": "8.4.4",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
+    "dir-compare": "4.0.0",
+    "kafkajs": "2.0.0",
+    "reflect-metadata": "0.1.13",
+    "ts-morph": "^13.0.2",
+    "@apollo/gateway": "0.42.3",
+    "@nestjs/graphql": "9.1.2",
+    "@nestjs/platform-express": "8.2.3",
+    "@octokit/openapi-types": "2.3.1",
+    "minimatch": "5.1.0",
+    "octokit": "1.7.1",
+    "octokit-plugin-create-pull-request": "3.9.3",
+    "rimraf": "^3.0.2",
+    "rxjs": "7.4.0",
+    "dotenv": "16.0.0",
+    "nest-winston": "1.6.2",
+    "winston-cloud-logging": "1.0.2",
+    "@prisma/client": "3.15.2",
+    "nestjs-prisma": "0.16.0",
+    "prisma": "3.15.2",
+    "ajv": "6.12.6",
+    "cron": "1.8.2",
+    "cronstrue": "1.122.0",
+    "node-fetch": "2.6.7",
+    "rc": "1.2.8",
+    "typescript": "4.1.2",
+    "@amplication/data-service-generator": "^0.16.1",
+    "@amplication/prisma-db": "^0.16.1",
+    "@codebrew/nestjs-storage": "0.1.6",
+    "@google-cloud/cloudbuild": "2.0.3",
+    "@google-cloud/secret-manager": "3.10.1",
+    "@google-cloud/storage": "5.17.0",
+    "@google-cloud/trace-agent": "5.1.3",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/passport": "8.2.2",
+    "@ntegral/nestjs-sendgrid": "1.0.0",
+    "@octokit/app": "12.0.5",
+    "@octokit/auth-app": "3.6.1",
+    "@octokit/core": "3.5.1",
+    "@octokit/oauth-app": "2.0.3",
+    "@octokit/oauth-authorization-url": "4.1.1",
+    "@octokit/rest": "18.12.0",
+    "@sendgrid/mail": "7.4.5",
+    "@slynova/flydrive": "1.0.3",
+    "@slynova/flydrive-gcs": "1.0.3",
+    "adm-zip": "0.5.9",
+    "analytics-node": "4.0.1",
+    "apollo-server-express": "3.5.0",
+    "bcrypt": "5.0.1",
+    "cuid": "2.1.8",
+    "dockerode": "3.2.1",
+    "fs-extra": "10.0.1",
+    "get-stream": "6.0.1",
+    "graphql-type-json": "0.3.2",
+    "node-jose": "2.0.0",
+    "passport": "0.6.0",
+    "passport-github2": "0.1.12",
+    "passport-jwt": "4.0.0",
+    "php-serialize": "4.0.2",
+    "tar-stream": "2.2.0",
+    "uuid": "8.3.2",
+    "zlib": "1.0.5",
+    "@nestjs/serve-static": "2.2.2",
+    "@nestjs/swagger": "5.1.5",
+    "glob": "8.0.1",
+    "jsonwebtoken": "8.5.1",
+    "nest-access-control": "2.0.3",
+    "nestjs-paginate": "2.5.4",
+    "npm-run-all": "4.1.5",
+    "passport-http": "0.3.0",
+    "swagger-ui-express": "4.3.0",
+    "ts-node": "9.1.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
@@ -38,24 +190,155 @@
     "@nrwl/jest": "14.6.5",
     "@nrwl/linter": "14.6.5",
     "@nrwl/node": "^14.6.5",
-    "@types/fs-extra": "^9.0.13",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
+    "@types/fs-extra": "9.0.13",
+    "@types/jest": "26.0.19",
+    "@types/node": "16.3.0",
     "@types/semver": "7.3.9",
-    "@typescript-eslint/eslint-plugin": "~5.33.1",
-    "@typescript-eslint/parser": "~5.33.1",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
+    "@typescript-eslint/eslint-plugin": "4.28.3",
+    "@typescript-eslint/parser": "4.28.3",
+    "eslint": "7.23.0",
+    "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.1.0",
     "graphql": "15.3.0",
-    "jest": "28.1.1",
+    "jest": "27.0.6",
     "jest-environment-jsdom": "28.1.1",
     "npm-run-all": "4.1.5",
     "nx": "14.6.5",
-    "prettier": "2.0.5",
-    "ts-jest": "27.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "^4.8.3"
+    "prettier": "1.19.1",
+    "ts-jest": "27.0.3",
+    "ts-node": "9.1.1",
+    "typescript": "4.2.3",
+    "@oclif/dev-cli": "1.26.10",
+    "@types/pluralize": "0.0.29",
+    "@types/url-join": "4.0.1",
+    "eslint-config-oclif": "3.1.0",
+    "eslint-config-oclif-typescript": "0.2.0",
+    "eslint-import-resolver-lerna": "2.0.0",
+    "eslint-plugin-import": "2.23.4",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "13.2.0",
+    "@types/ajv-errors": "1.0.3",
+    "@types/amplitude-js": "5.11.3",
+    "@types/chalk-pipe": "2.0.0",
+    "@types/downloadjs": "1.4.3",
+    "@types/lodash": "4.14.182",
+    "@types/react": "17.0.34",
+    "@types/react-beautiful-dnd": "13.1.1",
+    "@types/react-dom": "16.9.14",
+    "@types/react-helmet": "6.1.5",
+    "@types/react-lazylog": "4.5.1",
+    "@types/react-router-dom": "5.3.3",
+    "@types/react-tracking": "7.0.4",
+    "jest-mock-extended": "^2.0.4",
+    "react-app-rewired": "2.1.8",
+    "@types/json-schema": "7.0.9",
+    "@types/normalize-path": "3.0.0",
+    "fast-glob": "3.2.10",
+    "json-schema-to-typescript": "10.1.5",
+    "normalize-path": "3.0.0",
+    "rimraf": "3.0.2",
+    "@apollo/client": "3.6.9",
+    "@material-ui/core": "^4.12.1",
+    "@nestjs/common": "8.2.3",
+    "@nestjs/config": "1.2.0",
+    "@nestjs/core": "8.2.3",
+    "@nestjs/graphql": "9.1.2",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/passport": "8.2.2",
+    "@nestjs/platform-express": "8.2.3",
+    "@nestjs/serve-static": "2.2.2",
+    "@nestjs/swagger": "5.1.5",
+    "@nestjs/testing": "8.2.3",
+    "@prisma/client": "3.15.2",
+    "@types/base-64": "1.0.0",
+    "@types/bcrypt": "5.0.0",
+    "@types/express": "4.17.9",
+    "@types/graphql-type-json": "0.3.2",
+    "@types/morgan": "1.9.3",
+    "@types/passport-http": "0.3.9",
+    "@types/passport-jwt": "3.0.6",
+    "@types/prettier": "2.1.5",
+    "@types/replace-ext": "2.0.0",
+    "@types/supertest": "2.0.11",
+    "apollo-server-express": "3.6.1",
+    "babel-eslint": "10.1.0",
+    "base-64": "1.0.0",
+    "bcrypt": "5.0.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
+    "cross-fetch": "3.1.5",
+    "docker-compose": "0.23.17",
+    "eslint-config-react-app": "7.0.0",
+    "eslint-plugin-flowtype": "5.8.0",
+    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-testing-library": "3.10.2",
+    "express": "4.17.1",
+    "get-port": "5.1.1",
+    "graphql-type-json": "0.3.2",
+    "lodash.clonedeep": "4.5.0",
+    "nest-access-control": "2.0.3",
+    "nestjs-prisma": "0.16.0",
+    "passport": "0.6.0",
+    "passport-http": "0.3.0",
+    "passport-jwt": "4.0.0",
+    "ra-data-graphql-amplication": "0.0.13",
+    "react-admin": "3.19.11",
+    "reflect-metadata": "0.1.13",
+    "sleep-promise": "9.1.0",
+    "type-fest": "0.11.0",
+    "web-vitals": "0.2.4",
+    "@babel/core": "7.18.10",
+    "@storybook/addon-actions": "6.4.22",
+    "@storybook/addon-essentials": "6.4.22",
+    "@storybook/addon-interactions": "6.4.22",
+    "@storybook/addon-links": "6.5.10",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/manager-webpack5": "6.4.22",
+    "@storybook/preset-scss": "1.0.3",
+    "@storybook/react": "6.5.10",
+    "@storybook/testing-library": "0.0.13",
+    "@types/classnames": "2.3.1",
+    "babel-loader": "8.2.5",
+    "css-loader": "6.7.1",
+    "formik": "2.2.9",
+    "react-is": "16.13.1",
+    "react-scripts": "5.0.0",
+    "rollup": "2.63.0",
+    "rollup-plugin-copy": "3.4.0",
+    "rollup-plugin-postcss": "3.1.8",
+    "rollup-plugin-typescript2": "0.32.1",
+    "sass": "1.35.2",
+    "sass-loader": "12.6.0",
+    "style-loader": "3.3.1",
+    "webpack": "5.65.0",
+    "@nestjs/cli": "8.2.5",
+    "@types/minimatch": "3.0.5",
+    "source-map-support": "^0.5.20",
+    "supertest": "4.0.2",
+    "ts-loader": "6.2.2",
+    "tsconfig-paths": "3.12.0",
+    "@nestjs/schematics": "^8.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "@types/cron": "^1.7.3",
+    "@types/node-fetch": "2.6.1",
+    "@types/rc": "1.2.0",
+    "@types/adm-zip": "0.4.34",
+    "@types/dockerode": "2.5.34",
+    "@types/passport": "1.0.7",
+    "@types/passport-github": "1.1.7",
+    "@types/passport-github2": "1.2.5",
+    "@types/query-string": "6.3.0",
+    "@types/tar-stream": "2.2.2",
+    "@types/triple-beam": "1.3.2",
+    "apollo-server-testing": "2.16.1",
+    "google-libphonenumber": "3.2.26",
+    "@types/glob": "7.2.0",
+    "@types/jsonwebtoken": "8.5.8"
   },
   "engines": {
     "node": ">=16.0.0",
